package org.binu.framework;

/**
 * Calculate the better of the move.
 */
public interface MoveAnalyser {
    int findBestMove();
}
